--- a/css/login.css
+++ b/css/login.css
@@ -105,7 +105,7 @@ h2
 
 .span-page
 {
-    height:60vh;
+    height: 65vh;
 }
 
 #login-map
@@ -121,4 +121,9 @@ h2
         display: none;
     }
 
+  }
+
+  form.span-page
+  {
+      height:65vh;
   }
