Styled settings and added favicon/title to each static page

--- a/css/app.css
+++ b/css/app.css
@@ -119,3 +119,19 @@ nav
 {
     color: #ababab;
 }
+
+.settings-wrapper
+{
+    background-color: white;
+    padding: 3vh;
+    border-radius: 15px;
+    margin-top: 3vh;
+}
+
+.title-tag
+{
+    color: #888888;
+    size: 12px;
+    font-weight: bold;
+    margin-top: 1.5vh;
+}
